--- a/Javascript/menu/menu.html
+++ b/Javascript/menu/menu.html
@@ -26,7 +26,7 @@
 
                     <div class="subMenu">
 
-                        <span class="menuLabel">SOUS-MENU</span>
+                        <span class="menuLabel">SOUS-MENU ►</span>
 
                         <div class="menuContent">
 
@@ -35,7 +35,7 @@
 
                             <div class="subMenu">
 
-                                <span class="menuLabel">SOUS-MENU</span>
+                                <span class="menuLabel">SOUS-MENU ►</span>
 
                                 <div class="menuContent">
 
