--- a/Javascript/menu/menu.html
+++ b/Javascript/menu/menu.html
@@ -48,6 +48,21 @@
 
                             </div>
 
+                            <div class="subMenu">
+
+                                <span class="menuLabel">SOUS-MENU ►</span>
+
+                                <div class="menuContent">
+
+                                    <p class="menuElem">ELEMENT</p>
+                                    <p class="menuElem">ELEMENT</p>
+                                    <p class="menuElem">ELEMENT</p>
+                                    <p class="menuElem">ELEMENT</p>
+
+                                </div>
+
+                            </div>
+
                             <p class="menuElem">ELEMENT</p>
 
                         </div>
